--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
+/* --------------------Font poppins use in all section in body ---------------- */
+
 body{
     font-family: 'Poppins', sans-serif;
 
 }
-header{
+/*--------------------------- Background color ----------------------- */
+.First-page{
 background-color:#2D25A0;
 height: 100vh;
 width: 100%;
 }
+/*---------------- Manu bar allignment ------------------- */
 .navbar{
 width: 85%;
 margin: auto; 
@@ -16,20 +20,21 @@ align-items: center;
 justify-content: space-between;
 
 }
-
+/*----------------- manu all list align --------------------- */
 nav ul li{
 display: inline-block;    
 list-style: none;
 margin: 20px 20px;
 }
 
+/*-------------- Anchor tag color change and decoration none ---------------- */
 nav ul li a{
 
 text-decoration: none;
 color: white;
 
 }
-
+/*---------------- Login Button Decoration  -------------------- */
 .Button{
 background: #E02C6D;
 width: 123px;
@@ -42,6 +47,7 @@ margin-right: 50px;
 transition: 0.6s ease;
 
 }
+/*-------------------- Button effect whenever coursor point in the button ------------------- */
 .Button:hover{
 
     background-color:rgb(255, 208, 0) ;
@@ -49,19 +55,23 @@ transition: 0.6s ease;
     border-radius: 20px;
 
 }
+/*------------------- Font icon color and mergin --------------------- */
 .fas{
 color: white;
 margin: 10px;
 
 }
+/*------------------------------- Image sizing ---------------------- */
 .image img{
 width: 556px;
 height: 438px;
 float: right;
 margin-right: 120px;
+margin-top: -350px;
 
 
 }
+/*----------------- Text Decoratin -------------------------- */
 .head-line{
 margin: auto 120px;
 padding:0 35px;
@@ -73,6 +83,8 @@ color: white;
 font-size: 50px;
 
 }
+
+/* ----------------watch live option decoration ----------------- */
 .Click{
     background: #E02C6D;
     width: 168px;
@@ -85,6 +97,7 @@ font-size: 50px;
     transition: 0.6s ease;
 
 }
+/*---------------- hover effect use -------------------- */
 .Click:hover{
 background-color:rgb(255, 208, 0) ;
 color:black;
@@ -106,6 +119,7 @@ justify-content: center;
 
 
 }
+/*------------------ Each palyer for each box with box shadow -------------- */
   
 .box{
 
@@ -121,7 +135,7 @@ justify-content: center;
     height: 100%;
 }
 
-
+/*------------------ box hover effect use -------------------- */
 .box:hover{
 transform:scale(1.03);
 
@@ -133,6 +147,7 @@ text-align: justify;
 
 
 }
+/*-------------- player album decoration column wise ---------------------- */
 .player-album{
 
 display: grid;
@@ -147,6 +162,7 @@ display: flex;
 
 
 }
+ /*------------- Hilights .Argentina-vs-Chile -----------------  */
 .Match-image img{
 
 width: 556px;
@@ -159,7 +175,7 @@ transition: 0.5S;
 
     transform: scale(1.04);
 }
-
+/*----------- .Highlights Decoration -------------- */
 .Highlights{
 
 margin-left: 50px;
@@ -168,6 +184,7 @@ padding: 60px;
 .Title{
 font-size: 40px;
 }
+/*------------------- Text alignment ------------------ */
 .Argentina-vs-Chile{
 margin-top: 100px;
  width: 1130px;
@@ -178,11 +195,13 @@ margin-left: 50px;
 box-sizing:border-box;
 
 }
+/*-------------- Information Decoration in hilights ---------------- */
 .Highlights p{
 font-size: 15px;
 line-height: 25px;
 
 }
+/*------------ Background for using .Animation ------------------ */
 .animation-text{
 background-color: #2D25A0;
 width: 100%;
@@ -199,21 +218,24 @@ padding-top: 50px;
 color: white;
 
 }
+/*-------------------changing animation text color ------------------- */
 span{
 
     color:rgb(255, 123, 0);
 }
+/*----------------- font icoin color change -------------------- */
 .fa-trophy.filled{
 color:rgb(255, 123, 0) ;
 
 }
-
+/*--------------------- Animation effect--------------------------- */
 span::after{
 content: '';
 animation: animate infinite ease-in-out 6s;
 
 
 }
+/*----------------- Changing text ---------------- */
 @keyframes animate {
 
     0%{content: 'GOLDEN BOOT - LIONEL MESSI';}
@@ -228,18 +250,21 @@ width: 473px;
 height: 100px;
 
 }
+/*--------------- Social media icon decoration -------------- */
 .social-icon{
 margin-left: 190px;
 align-items: center;
 padding-left: 30px;
 
 }
+/*------------ Media icon color and merging set ----------------- */
 .fab{
 color:grey;    
 margin-left: 12px;
 font-size: 18px;
 
 }
+/* ----------------copywrite text decoration --------------- */
 .copywrite{
 text-align: center;
 font-size: 14PX;
@@ -252,8 +277,125 @@ Media query for Cell Phones
 ...........................*/
 
 @media only screen and (max-width:688px) {
+ 
+    /*------------First page decoration--------------- */
+    .First-page{
+     
+        height: 695px;
+        width: 360px;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+  /*------------- Image size decrease ----------- */
+    .image img{
+
+        width: 270px;
+        height: 200px;
+        margin-right:50px;
+        margin-top:-80px;
+        
+    }
+
+/*----------- Headline adjust ------------ */
+    .head-line{
+width: 278px;
+height: 138px;
+margin: 0;
 
 
+    }
+    /*--------- heading size decrease margin top descrease ---------- */
+.head-line h1{
+    margin-top:-70px;
+    font-size: 30px;
+   
+}
+    nav{
 
+        display: none;
+    }
+    .navbar{
+       margin-top:10px ;
+        margin-left: 190px;
+    } 
+
+    /*----------- Make picture one by one ------------ */
+.player-album{
+grid-template-columns: 1fr;
+
+
+}
+/*------------ Box size smaller-------------*/
+.box{
+
+width: 370PX;
+height: 474px;
+
+}
+/*--------------- Make iteam 1fr in column -------------- */
+  
+.Argentina-vs-Chile{
+display: grid;
+grid-template-columns: 1fr;
+margin: 0;
+padding: 0;
+
+
+}
+/*------------ Text in center ------------- */
+.Highlights{
+    margin-left: 0;
+    height: 299px;
+    width: 329px;
+    padding: 0;
+}
+.Highlights .Click{
+
+    margin-left: 0;
+}
+.Match-image{
+    height: 249px;
+    width: 358px;
+    margin-top: 90PX;
+
+}
+/*------------------------ Image size decrease and alignment------------- */
+.Match-image img{
+    margin-top: 70px; 
+    width: 100%;
+    height: 100%;
     
+}
+.animation-text{
+
+padding: 0;
+font-size: 12px;
+margin-top: 280px;
+
+}
+/*------------ Iteam in center column wiise -------------- */
+.main{
+width: 200px;
+height: 150px;
+margin-left: -20px;
+
+}
+/*------------- Logo size adjust for smaller than 688px device ------------- */
+.logo img{
+
+    width: 100%;
+    height:100%;   
+}
+/*-------------- Social icon customize with changeing zise-------------- */
+.social-icon{
+margin-left: 40px;
+padding: 0;
+
+}
+.copywrite{
+
+margin-left: 10px;
+}
+
 }
